--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ server {
         }
 
         location /api {
-            proxy_pass http://app:3333/;
+            proxy_pass http://app:3333;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
